usfm_parser/tests/snapshots/recovery__unknown_marker__no_space_before_versenumber.snap
---
source: usfm_parser/tests/recovery.rs
description: "\\id GEN genesis Some desc\n\\c 1\n\\p\n\\v1 test verse\n\\s3 test\n\\v 2 more verse\n\\c 2\n\\p\n\\v 1 next chapter\n\\v2 error text"
---
Book GEN "genesis Some desc" @0..25
ChapterStart 1@26..30
Para p@31..49
  Text "test verse"@38..49
Para s3@49..74
  Text "test "@53..58
  VerseStart 2@58..62
  Text "more verse"@63..74
  VerseEnd 2
ChapterEnd 1
ChapterStart 2@74..78
Para p@79..114
  VerseStart 1@82..86
  Text "next chapter error text"@87..114
  VerseEnd 1
ChapterEnd 2
--- diagnostics
error[unknown-marker] @34..37: unknown marker `\v1`
error[verse-in-heading] @58..60: `\v` inside a title or section heading
error[unknown-marker] @100..103: unknown marker `\v2`
